// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button Addon Append 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary"
    onClick={[Function]}
  >
    <h1
      className="heading color-inverted size-md weight-bold is-centered is-inline"
    >
      You Shall Not Pass!
    </h1>
    But ill-tempered Thengel.
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Addon Prepend 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary"
    onClick={[Function]}
  >
    Dare Erebor forgive most.
    <h1
      className="heading color-inverted size-md weight-bold is-centered is-inline"
    >
      You Shall Not Pass!
    </h1>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary"
    onClick={[Function]}
  >
    <h1
      className="heading color-inverted size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary is-inline"
    onClick={[Function]}
  >
    <h1
      className="heading color-inverted size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Muted 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary is-muted"
    onClick={[Function]}
  >
    <h1
      className="heading color-inverted size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary"
    onClick={[Function]}
  >
    <h1
      className="heading color-inverted size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
  <button
    className="button type-secondary"
    onClick={[Function]}
  >
    <h1
      className="heading color-primary size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
  <button
    className="button type-tertiary is-inline"
    onClick={[Function]}
  >
    <h1
      className="heading color-primary size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
</div>
`;
